unpackaged/main/default/objects/Account_Team_Assignment_Exception__c/Account_Team_Assignment_Exception__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom setting holds the exception scenarios for account team assignment

The logic for the custom setting can be read like this: &#39;Match the Partner_Id__c, check the Value in the Account_field__c, and if there is a match, do not assign the Team_Role__c.&#39;
Example for row AM-Medical: &#39;If the partner id is for BCBS Florida, and the Account.LSV_Business__c field = &#39;Medical Only&#39;, then do not assign the Team Role of &#39;AccountManager&#39;.</description>
    <label>Account Team Assignment Exception</label>
</CustomObject>