unpackaged/main/default/objects/Account_Team_Assignment_Exception__c/fields/Account_field__c.field-meta.xml
<CustomField>
    <fullName>Account_field__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Account field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>