unpackaged/main/default/objects/Account_Team_Assignment_Exception__c/fields/Do_Not_Assign__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Assign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Assign</label>
    <type>Checkbox</type>
</CustomField>