unpackaged/main/default/objects/Account_Team_Assignment_Exception__c/fields/Partner_Id__c.field-meta.xml
<CustomField>
    <fullName>Partner_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Partner Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>