unpackaged/main/default/objects/Account_Team_Assignment_Exception__c/fields/Team_Role__c.field-meta.xml
<CustomField>
    <fullName>Team_Role__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Team Role</label>
    <length>80</length>
    <type>Text</type>
</CustomField>