unpackaged/main/default/objects/Account_Team_Assignment_Exception__c/listViews/All_Records.listView-meta.xml
<ListView>
    <fullName>All_Records</fullName>
    <columns>NAME</columns>
    <columns>Partner_Id__c</columns>
    <columns>Account_field__c</columns>
    <columns>Value__c</columns>
    <columns>Team_Role__c</columns>
    <columns>Do_Not_Assign__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>